--- a/recipes/colcannon.html
+++ b/recipes/colcannon.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Colcannon</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <h1>
-            <img src="/images/2432844-b50a0b51dfca4ca9a9a43998bfeec6db.jpeg" alt="400x400" width="400" height="400"> 
-            Colcannon
-        </h1>
-      
-        
-        <script src="" async defer></script>
+        <h1>Colcannon</h1>
+        <p><img src="\\wsl.localhost/Ubuntu/home/pedro/repos/odin-recipes/images/colcannon.png" alt="400x400" width="400" height="400" ></p>
+        <p>teste</p>
     </body>
 </html>
