Adding css style

--- a/recipes/bakedpotatosoup.html
+++ b/recipes/bakedpotatosoup.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Colcannon</title>
+        <link rel="stylesheet" type="text/css" href="//wsl.localhost/Ubuntu/home/pedro/repos/odin-recipes/style.css"/>
     </head>
     <body>
         <h1>Baked Potato Soup</h1>
