--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Odin Recipes</title>   
+        <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
         <h1>odin-recipes</h1>
